# openzl-jni

./: .gitignore  CHANGELOG  CMakeLists.txt  CODING_STYLE  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  THIRD_PARTY.md  TODO.md  WARRANTY  corpus_download.sh  corpus_upload.sh
.github/workflows/: ci.yml  cmake-ci.yml  update-sitemap.yml  wheels.yml
JNI/: OpenZLCompressor.cpp  OpenZLCompressor.h  OpenZLCompressorNumeric.cpp  OpenZLNativeSupport.cpp  OpenZLNativeSupport.h  OpenZLProtobuf.cpp  OpenZLProtobuf.h  pom.xml
JNI/benchmark/: README.md  pom.xml
JNI/compressor/: OpenZLCompressorArrays.cpp  OpenZLCompressorDirect.cpp  OpenZLCompressorMetadata.cpp  OpenZLCompressorNumeric.cpp
JNI/openzl-bench/: README.md  pom.xml
JNI/openzl-jni/: pom.xml
JNI/openzl-utils/: pom.xml
JNI/scripts/: build-native.sh
benchmark/unitBench/scenarios/misc/: sao.c  sao.h
cli/: CMakeLists.txt  zli.cpp
cli/commands/: cmd_benchmark.cpp  cmd_compress.cpp  cmd_decompress.cpp
cli/utils/: util.cpp
cmake/: copy_first_existing.cmake  patch_openzl_windows_xgboost.cmake
cmake/shims/: logger_string_compat.h  tools_io_stdexcept_compat.h
contrib/reproducibility/dataset_manager/: BUCK  README.md  base_dataset_builder.py  dataset_manager.py  dataset_utils.py  requirements.txt
contrib/reproducibility/dataset_manager/dataset_builders/: BUCK  __init__.py
contrib/reproducibility/dataset_manager/dataset_builders/binance/: BUCK  __init__.py  binance_dataset_builder.py  binance_manifest.json
contrib/reproducibility/dataset_manager/dataset_builders/era5/: BUCK  __init__.py  era5_dataset_builder.py  era5_manifest.json
contrib/reproducibility/dataset_manager/dataset_builders/ppmf/: BUCK  __init__.py  ppmf_dataset_builder.py  ppmf_manifest.json
contrib/reproducibility/dataset_manager/dataset_builders/psam/: BUCK  __init__.py  psam_dataset_builder.py  psam_manifest.json
contrib/reproducibility/dataset_manager/dataset_builders/rea6/: BUCK  __init__.py  rea6_dataset_builder.py  rea6_manifest.json
contrib/reproducibility/dataset_manager/dataset_builders/tlc/: BUCK  __init__.py  tlc_dataset_builder.py  tlc_manifest.json
contrib/reproducibility/figures/: make-pareto-optimal-figures.py
contrib/reproducibility/watermark/binance_canonical/: trained.zlc
contrib/reproducibility/watermark/era5_flux/: trained.zlc
contrib/reproducibility/watermark/era5_precip/: trained.zlc
contrib/reproducibility/watermark/era5_pressure/: trained.zlc
contrib/reproducibility/watermark/era5_snow/: trained.zlc
contrib/reproducibility/watermark/era5_wind/: trained.zlc
contrib/reproducibility/watermark/ppmf_person/high/: trained.zlc
contrib/reproducibility/watermark/ppmf_person/low/: trained.zlc
contrib/reproducibility/watermark/ppmf_unit/high/: trained.zlc
contrib/reproducibility/watermark/ppmf_unit/low/: trained.zlc
contrib/reproducibility/watermark/psam_h/: trained.zlc
contrib/reproducibility/watermark/psam_p/: trained.zlc
contrib/reproducibility/watermark/rea6_precip/: trained.zlc
contrib/reproducibility/watermark/tlc_canonical/: trained.zlc
cpp/src/openzl/cpp/experimental/trace/: CompressionTraceHooks.cpp  CompressionTraceHooks.hpp  Tracer.cpp  Tracer.hpp
demo/: README.md  docker-compose.yml
demo/grafana/dashboards/: compressorinspection.json  openzl-grpc-dashboard.json
demo/grafana/provisioning/dashboards/: openzl.yml
demo/prometheus/: prometheus.yml
doc/mkdocs/: mkdocs.yml
doc/mkdocs/doc/: index.md
doc/mkdocs/doc/getting-started/: cli.md  concepts.md  introduction.md  quick-start.md  using-openzl.md
docs/: index.html  robots.txt  sitemap.xml
examples/ppmf_unit/high/: benchmark.zlc  test.txt  train.txt
examples/ppmf_unit/low/: benchmark_low.zlc  test.txt  train.txt
include/openzl/: zl_opaque_types.h  zl_selector.h  zl_version.h
include/openzl/codecs/: zl_divide_by.h  zl_sddl.md
patches/: fix_future_capture.py
py/ext/openzl/ext/: graphs.cpp
scripts/: coverage_summary.py
src/openzl/codecs/lz/: encode_lz_binding.c
src/openzl/common/: stream.c  stream.h
src/openzl/compress/: cctx.c  compressor_serialization.c  dyngraph_interface.c  encode_frameheader.c  graphmgr.c  rtgraphs.c  segmenter.c
src/openzl/compress/graphs/: simple_data_description_language.c  simple_data_description_language.h
tests/codecs/: test_sddl.cpp
tests/round_trip/: test_segmenter.cpp
tests/unittest/common/: test_stream.cpp
tools/io/: InputFile.cpp  InputSetLogger.cpp  OutputFile.cpp
tools/sddl/compiler/: Compiler.cpp  Compiler.h  Grammar.cpp  Serializer.cpp  Serializer.h  Syntax.cpp  Syntax.h  Syntax.md  main.cpp
tools/sddl/compiler/tests/: CompilerTest.cpp
tools/training/ace/: BUCK  ace.cpp  ace_combination.cpp  ace_combination.h  crowding_distance_selector.cpp  crowding_distance_selector.h
tools/training/tests/: BUCK  test_ace_combination.cpp
tools/training/utils/: genetic_algorithm.cpp
tools/visualization_app/: README.md  eslint.config.js  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
tools/visualization_app/src/: index.css  main.tsx
tools/visualization_app/src/components/: StreamdumpGraph.tsx  Toolbar.tsx
tools/visualization_app/src/graphVisualization/controllers/: LayoutController.ts  StreamdumpGraphController.ts
tools/visualization_app/src/graphVisualization/models/: CodecDag.ts  InteractiveStreamdumpGraph.ts  InternalCodecNode.ts  InternalEdge.ts  InternalGraphNode.ts  InternalNode.ts  types.ts
tools/visualization_app/src/graphVisualization/views/: EdgeView.tsx  GraphView.tsx  LocalParamsView.tsx  NodeView.tsx  ScrollablePopover.tsx  StreamdumpGraphView.tsx
tools/visualization_app/src/interfaces/: NullableStreamdump.ts  SerializedCodec.ts  SerializedCopyParamInfo.ts  SerializedGraph.ts  SerializedIntParamInfo.ts  SerializedLocalParamInfo.ts  SerializedRefParamInfo.ts  SerializedStream.ts
tools/visualization_app/src/models/: CodecDag.ts
tools/visualization_app/src/styles/: streamdumpGraph.css
tools/visualization_app/tests/: createTestModels.ts  interactiveStreamdumpGraph.test.ts
(+78 files in other folders)
